# opcua_rtde

./: README.md
opcua_ur_rtde/: CMakeLists.txt  package.xml
opcua_ur_rtde/configs/: robotmodel.xml
opcua_ur_rtde/configs/Published/robot/: robot.Classes.cs  robot.Constants.cs  robot.DataTypes.cs  robot.NodeSet.xml  robot.NodeSet2.xml  robot.PredefinedNodes.uanodes  robot.PredefinedNodes.xml  robot.Types.bsd  robot.Types.xsd  robotmodel.csv  robotmodel.xml
opcua_ur_rtde/include/opcua_ur_rtde/: robot.h  robottype.h  server_opcua_ur5e.h
opcua_ur_rtde/src/: client.py  robot.c  server_opcua_generated_ur5e.c  server_opcua_ur5e.c  server_rtde_feeddata.cpp
